payment-service/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service-service
  namespace: apps-payment-service
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
